# eyerevealer

./: CMakeLists.txt  LICENSE  README.md
CompareVersion/: CompareVersion.cpp  CompareVersion.hpp
cmake/modules/: FindFFMPEG.cmake
doc/: knownissues.txt
glad/: CMakeLists.txt  glad.c
glad/glad/: glad.h
imgui/: CMakeLists.txt
include/: Timer.hpp  aud_encoder.hpp  av_file_receiver.hpp  av_receiver.hpp  avails.hpp  device_stream_consumer_parser.hpp  device_stream_publisher.hpp  ffVideoWriter.hpp  file_receiver.hpp  fileline_receiver.hpp  float2.hpp  httprest.hpp  itd_parser.hpp  itd_usb_receiver.hpp  itd_wrapper.hpp  loopcond.hpp  looper.hpp  mpegts_decoder.hpp  mpegts_parser.hpp  mutexed_buffer.hpp  pupilinvis_interface.hpp  pupilinvis_rtsp_gaze_parser.hpp  pupilinvis_rtsp_vid_parser.hpp  realsense_parser.hpp  realsense_usb_receiver.hpp  rect.hpp  reencoder.hpp  rteye2_config.hpp.in  rteye2_defines.hpp  rtsp_av_decoder.hpp  rtsp_receiver.hpp  saver_thread_info.hpp  socket_udp6.hpp  tagged_avpkt_ptr.hpp  timed_buffer.hpp  tobii2_data_parser.hpp  tobii2_streaming_conn.hpp  tobii2_video_parser.hpp  tobii2rest.hpp  tobii3_parser.hpp  (+7 more)
mdns_cpp/: CMakeLists.txt
mdns_cpp/include/mdns_cpp/: mdns.hpp
mdns_cpp/src/: mdns.cpp  utils.cpp
rteye2ffmpeg/: ffmpeg_rtsp_structs.h
scripts/: check_rs_gaze.sh  compute_all_roc.sh  detect_dri_render_node.sh  dovisualsal.sh  extract_tobiis.sh  h5_to_uint8_all.sh  install_ftdi.sh  install_realsense_ubuntu2204.sh  plot_rs_tobii_gaze_xy.py  powersettings.sh  print_imu.py  runrteye2viewer.sh  runsingle.sh  sync_all_spacetime.sh  tobii2_to_rs_gaze_all.sh  toperformance.sh
scripts/analy/plotting/: plot_XY_and_roc.py  plot_bargraphs_roc.py
scripts/analy/stats/: compute_roc.py
scripts/analy/sync/: time_space_sync.py  tobii2_to_rs_gaze.py
scripts/analy/visualize/: visualize_sal_and_gaze.py  visualize_tobii2_rs_gaze.py
scripts/convertraw/: convert_timestamps.sh  print_timestamps.py  readh5py.py  recoverghettoh5.py
scripts/eyecentered/: centerize_vid.py  dosalpct.sh  get_all_pcts.sh  get_pcts.py  get_pctsALL.py  loadsql.py  make_single_vids.sh  makevids.py  notes.txt  plotsns.py  rocdistr.py  run_all_makevids.sh  run_all_makevids3.sh  run_all_tobii2.sh  run_all_tobii3.sh  run_all_tpfp.sh  run_all_tpfp3.sh  run_single_pct.sh  saccade_detection.py  saliency_pct.py  single_tpfp_sample.sh  tobii2example.sh  tobii3example.sh  tpfp_sample.py  vacuumall.sh
scripts/eyecentered/cameracalib/: calibration.xml  tobii2calib.py  undistort.py
scripts/eyecentered/dbstyle/: 01_csv_to_db.py
scripts/eyecentered/doc/: ideas.txt  todo.txt
scripts/eyecentered/sanity/: check_tobii3_gaze2.py
scripts/eyecentered/tests/: testblur.py  testembed.py
scripts/install_scripts/: install_dependencies_ubuntu2204.sh  install_opensusetw.sh  install_ubuntu.sh
scripts/install_scripts/realsense_cmake_fixes/: realsense2Targets-relwithdebinfo.cmake  realsense2Targets.cmake
scripts/oldinstall_scripts/: install_arch_dependencies.sh  install_rteye2.sh  packageme.sh
scripts/tobii2/: run_all_resample.sh  tobii2_resample_valgaze.py
scripts/tobii3/: resample_tobii3_data.py
scripts/usefulscripts/: debug_help.sh
tools/: file_depth_decoder.cpp  rteye2viewer.cpp  tobii2_file_vidgaze_decoder.cpp
